--- a/apps/vmware/roles/zeromq_vms/tasks/fanout/collect.yml
+++ b/apps/vmware/roles/zeromq_vms/tasks/fanout/collect.yml
@@ -29,4 +29,4 @@
 - name: cleanup kvm stats
   shell: cd /tmp; rm -rf radio_stats_with__*
   when: '"publisher" in fanout_pubsub_nodes[inventory_hostname].type'
-  become: true
+  delegate_to: "{{ fanout_pubsub_nodes[inventory_hostname].host }}"
