--- a/apps/vmware/roles/workload/tasks/lb/setup.yml
+++ b/apps/vmware/roles/workload/tasks/lb/setup.yml
@@ -57,3 +57,6 @@
   shell: nohup dump-ipvsadm-L-n--stats.py {{ workload.lb.ipvsadm.stats.timeout }} {{ workload_logs_dir }}/ipvsadm_L_n__stats.{{ inventory_hostname }}.csv > /dev/null 2> /dev/null < /dev/null &
   when: '"minion" in nodes[inventory_hostname]["type"]'
   become: true
+
+- name: setup load generator
+  include: roles/workload/tasks/lb/load/setup.yml
