adding cpulimit-based load gen

--- a/apps/vmware/roles/workload/tasks/lb/load/setup.yml
+++ b/apps/vmware/roles/workload/tasks/lb/load/setup.yml
@@ -3,3 +3,7 @@
 - name: setup load generator using stress-ng
   include: roles/workload/tasks/lb/load/stress_ng/setup.yml
   when: 'workload.lb.load.type == "stress_ng"'
+
+- name: setup load generator using cpulimit
+  include: roles/workload/tasks/lb/load/cpulimit/setup.yml
+  when: 'workload.lb.load.type == "cpulimit"'
