--- a/apps/vmware/roles/workload/tasks/lb/load/cleanup.yml
+++ b/apps/vmware/roles/workload/tasks/lb/load/cleanup.yml
@@ -3,3 +3,7 @@
 - name: cleanup load generator using stress-ng
   include: roles/workload/tasks/lb/load/stress_ng/cleanup.yml
   when: 'workload.lb.load.type == "stress_ng"'
+
+- name: cleanup load generator using cpulimit
+  include: roles/workload/tasks/lb/load/cpulimit/cleanup.yml
+  when: 'workload.lb.load.type == "cpulimit"'
