--- a/apps/vmware/roles/workload/tasks/lb/load/stress_ng/cleanup.yml
+++ b/apps/vmware/roles/workload/tasks/lb/load/stress_ng/cleanup.yml
@@ -1,14 +1,15 @@
 ---
 
-- name: stop stress-ng-rand.sh script
+- name: stop stress-ng-rand.sh scripts
   shell: pkill -u root -f stress-ng-rand.sh
   failed_when: false
   when: '"minion" in nodes[inventory_hostname]["type"]'
   become: true
 
 - name: stop left over dockers
-  shell: docker stop stress-ng-{{ prme_id }}{{ vm_id }}
+  shell: docker stop stress-ng-{{ prme_id }}{{ vm_id }}{{ item }}
   failed_when: false
+  with_sequence: start=0 end={{ workload.lb.load.stress_ng.dockers|int - 1 }} format=%d
   when: '"minion" in nodes[inventory_hostname]["type"]'
   become: true
 
