--- a/apps/vmware/roles/workload/tasks/lb/load/stress_ng/setup.yml
+++ b/apps/vmware/roles/workload/tasks/lb/load/stress_ng/setup.yml
@@ -14,6 +14,7 @@
   become: true
 
 - name: run stress-ng-rand.sh script
-  shell: stress-ng-rand.sh $(({{ workload.lb.load.stress_ng.base_seed }} + {{ prme_id }}{{ vm_id }})) stress-ng-{{ prme_id }}{{ vm_id }} {{ workload.lb.load.stress_ng.cpu }} {{ workload.lb.load.stress_ng.sleep }} &
+  shell: stress-ng-rand.sh $(({{ workload.lb.load.stress_ng.base_seed }} + {{ item|int }} + {{ prme_id }}{{ vm_id }})) stress-ng-{{ prme_id }}{{ vm_id }}{{ item }} {{ workload.lb.load.stress_ng.cpus }} {{ workload.lb.load.stress_ng.sleep }} &
+  with_sequence: start=0 end={{ workload.lb.load.stress_ng.dockers|int - 1 }} format=%d
   when: '"minion" in nodes[inventory_hostname]["type"]'
   become: true
