--- a/apps/vmware/vars/workload.yml
+++ b/apps/vmware/vars/workload.yml
@@ -3,34 +3,39 @@
 workload:
   lb:
     apache_servers:
-      replicas: 13
+      replicas: 8
       namespace: default
       policy: wlc
       feedback:
-        type: 'memcached' # Options: 'memcached' or'' to disable feedback
+        type: '' # Options: 'memcached' or'' to disable feedback
         namespace: default
-        timeout: 1
+        timeout: 0.001
         metric: cpu  # cpu, loadavg
         param: 0.5   # cpu:alpha_value, loadavg:max_load
     httperf_clients:
-      replicas: 13
+      replicas: 32
       namespace: default
-      uri: cgi-bin/cpu.py?loop_count=100  # index.html, cgi-bin/cpu.py?loop_count=10
-      num_conns: 1440
+      uri: cgi-bin/cpu.py?loop_count=1  # index.html, cgi-bin/cpu.py?loop_count=10
+      num_conns: 4800
       num_calls: 1
-      rate: 8
+      rate: 150
       ramp: 10
       iters: 1
-      timeout: 50
+      timeout: 10
     ipvsadm:
       stats:
-        timeout: 1
+        timeout: 0.01
       feedback:
-        type: memcached
-        timeout: 1
+        timeout: 0.001
     load:
-        type: '' # Options: 'stress_ng' or '' to disable load
+        type: '' # Options: 'stress_ng' or 'cpulimit' or '' to disable load
         stress_ng:
           base_seed: 1
-          cpu: 40
+          dockers: 4
+          cpus: 4
+          sleep: 0.5
+        cpulimit:
+          base_seed: 1
+          processes: 32
+          percentage: 8
           sleep: 0.5
