--- a/testbeds/vmware/vars/kubernetes/configs/prme-1x1-2x1-3x1-7x1-8x1-9x1.yml
+++ b/testbeds/vmware/vars/kubernetes/configs/prme-1x1-2x1-3x1-7x1-8x1-9x1.yml
@@ -6,7 +6,7 @@ master:
 
 nodes:
   prme1-k8s-node-120:
-    type: "master:minion"
+    type: "master"
     master: "{{ master }}"
   prme2-k8s-node-120:
     type: "minion"
