--- a/testbeds/vmware/roles/kubernetes/tasks/cluster/destroy.yml
+++ b/testbeds/vmware/roles/kubernetes/tasks/cluster/destroy.yml
@@ -44,19 +44,19 @@
 
 - name: clear ipvs table
   command: ipvsadm -C
-  when: '"minion" in nodes[inventory_hostname]["type"]'
+#  when: '"minion" in nodes[inventory_hostname]["type"]'
   become: true
 
 - name: remove kube-ipvs-proxy.py script
   file:
     path: /usr/local/bin/kube-ipvs-proxy.py
     state: absent
-  when: '"minion" in nodes[inventory_hostname]["type"]'
+#  when: '"minion" in nodes[inventory_hostname]["type"]'
   become: true
 
 - name: remove dummy interface ipvs0
   command: ip link del dev ipvs0
-  when: '"minion" in nodes[inventory_hostname]["type"]'
+#  when: '"minion" in nodes[inventory_hostname]["type"]'
   become: true
 
 - name: remove kubectl
@@ -66,5 +66,5 @@
 
 - name: flush iptable rules
   command: iptables -t nat -F
-  when: '"minion" in nodes[inventory_hostname]["type"]'
+#  when: '"minion" in nodes[inventory_hostname]["type"]'
   become: true
