--- a/apps/vmware/roles/workload/tasks/lb/load/cpulimit/setup.yml
+++ b/apps/vmware/roles/workload/tasks/lb/load/cpulimit/setup.yml
@@ -5,7 +5,7 @@
     src: roles/workload/files/inf-loop.sh
     dest: /usr/local/bin/inf-loop.sh
     mode: 0755
-  when: '"minion" in nodes[inventory_hostname]["type"]'
+  when: '"minion" in nodes[inventory_hostname]["type"] and workload.lb.nodes[inventory_hostname].nodetype == "apache"'
   become: true
 
 - name: copy inf-loop-cpulimit.sh script
@@ -13,7 +13,7 @@
     src: roles/workload/files/inf-loop-cpulimit.sh
     dest: /usr/local/bin/inf-loop-cpulimit.sh
     mode: 0755
-  when: '"minion" in nodes[inventory_hostname]["type"]'
+  when: '"minion" in nodes[inventory_hostname]["type"] and workload.lb.nodes[inventory_hostname].nodetype == "apache"'
   become: true
 
 - name: copy inf-loop-cpulimit-rand.sh script
@@ -21,10 +21,10 @@
     src: roles/workload/files/inf-loop-cpulimit-rand.sh
     dest: /usr/local/bin/inf-loop-cpulimit-rand.sh
     mode: 0755
-  when: '"minion" in nodes[inventory_hostname]["type"]'
+  when: '"minion" in nodes[inventory_hostname]["type"] and workload.lb.nodes[inventory_hostname].nodetype == "apache"'
   become: true
 
 - name: run inf-loop-cpulimit-rand.sh script
-  shell: inf-loop-cpulimit-rand.sh $(({{ workload.lb.load.cpulimit.base_seed }} + {{ prme_id }}{{ vm_id }})) {{ workload.lb.load.cpulimit.processes }} {{ workload.lb.load.cpulimit.percentage }} {{ workload.lb.load.cpulimit.sleep }} &
-  when: '"minion" in nodes[inventory_hostname]["type"]'
+  shell: inf-loop-cpulimit-rand.sh $(({{ workload.lb.load.cpulimit.base_seed }} + {{ prme_id }}{{ vm_id }})) {{ workload.lb.load.cpulimit.processes_per_core }} {{ workload.lb.load.cpulimit.percentage }} {{ workload.lb.load.cpulimit.cores }} {{ workload.lb.load.cpulimit.sleep }} &
+  when: '"minion" in nodes[inventory_hostname]["type"] and workload.lb.nodes[inventory_hostname].nodetype == "apache"'
   become: true
