--- a/apps/vmware/vars/workload.yml
+++ b/apps/vmware/vars/workload.yml
@@ -3,7 +3,7 @@
 workload:
   lb:
     apache_servers:
-      replicas: 8
+      replicas: 16
       namespace: default
       policy: wlc
       feedback:
@@ -13,12 +13,12 @@ workload:
         metric: cpu  # cpu, loadavg
         param: 0.5   # cpu:alpha_value, loadavg:max_load
     httperf_clients:
-      replicas: 32
+      replicas: 12
       namespace: default
-      uri: cgi-bin/cpu.py?loop_count=1  # index.html, cgi-bin/cpu.py?loop_count=10
-      num_conns: 4800
+      uri: /cgi-bin/cpu.py?loop_count=1  # /index.html, /cgi-bin/cpu.py?loop_count=1
+      num_conns: 2000
       num_calls: 1
-      rate: 150
+      rate: 50
       ramp: 10
       iters: 1
       timeout: 10
@@ -28,7 +28,7 @@ workload:
       feedback:
         timeout: 0.001
     load:
-        type: '' # Options: 'stress_ng' or 'cpulimit' or '' to disable load
+        type: 'cpulimit' # Options: 'stress_ng' or 'cpulimit' or '' to disable load
         stress_ng:
           base_seed: 1
           dockers: 4
@@ -36,6 +36,18 @@ workload:
           sleep: 0.5
         cpulimit:
           base_seed: 1
-          processes: 32
-          percentage: 8
+          cores: 16
+          processes_per_core: 8
+          percentage: 4
           sleep: 0.5
+    nodes:
+      prme2-k8s-node-120:
+        nodetype: "apache"
+      prme3-k8s-node-120:
+        nodetype: "apache"
+      prme7-k8s-node-120:
+        nodetype: "httperf"
+      prme8-k8s-node-120:
+        nodetype: "httperf"
+      prme9-k8s-node-120:
+        nodetype: "httperf"
