--- a/apps/vmware/vars/workload.yml
+++ b/apps/vmware/vars/workload.yml
@@ -3,7 +3,8 @@
 workload:
   lb:
     apache_servers:
-      replicas: 1
+      replicas: 14
+      replicas_per_node: 7
       namespace: default
       policy: wlc
       feedback:
@@ -13,12 +14,12 @@ workload:
         metric: cpu  # cpu, loadavg
         param: 0.5   # cpu:alpha_value, loadavg:max_load
     httperf_clients:
-      replicas: 1
+      replicas: 7
       namespace: default
       uri: /cgi-bin/cpu.py?loop_count=1 # /index.html, /cgi-bin/cpu.py?loop_count=1
-      num_conns: 2000
+      num_conns: "{{ 2 * 2000 }}"
       num_calls: 1
-      rate: 45
+      rate: "{{ 2 * 32 }}"
       ramp: 10
       iters: 1
       timeout: 10
@@ -51,7 +52,7 @@ workload:
       prme2-k8s-node-120:
         nodetype: "apache"
       prme3-k8s-node-120:
-        nodetype: "other"
+        nodetype: "apache"
       prme7-k8s-node-120:
         nodetype: "httperf"
       prme8-k8s-node-120:
