--- a/apps/vmware/automate_workload.yml
+++ b/apps/vmware/automate_workload.yml
@@ -20,9 +20,9 @@
 #                       ansible-playbook workload.yml --tags cleanup_lb_workload
 #      with_sequence: start=0 end=3 format=%d
 
-    - name: running with 14 apache, 7 httperf (2 * 2000 conns, 2 * 32 rate), and no load and no feedback (wlc.multi.max.noload.nofeedback)
-      shell: sleep 60; ansible-playbook workload.yml --tags setup_lb_workload;
-             sleep 10; ansible-playbook workload.yml --tags run_lb_workload;
-             sleep 60; ansible-playbook workload.yml --tags collect_lb_workload;
-                       ansible-playbook workload.yml --tags cleanup_lb_workload
+#    - name: running with 14 apache, 7 httperf (2 * 2000 conns, 2 * 32 rate), and no load and no feedback (wlc.multi.max.noload.nofeedback)
+#      shell: sleep 60; ansible-playbook workload.yml --tags setup_lb_workload;
+#             sleep 10; ansible-playbook workload.yml --tags run_lb_workload;
+#             sleep 60; ansible-playbook workload.yml --tags collect_lb_workload;
+#                       ansible-playbook workload.yml --tags cleanup_lb_workload
 #      with_sequence: start=0 end=3 format=%d
