--- a/apps/vmware/vars/workload.yml
+++ b/apps/vmware/vars/workload.yml
@@ -3,23 +3,38 @@
 workload:
   lb:
     apache_servers:
-      replicas: 14
-      replicas_per_node: 7
+      replicas: 2
+      replicas_per_node: 2
       namespace: default
       policy: wlc
       feedback:
-        type: '' # Options: 'memcached' or'' to disable feedback
-        namespace: default
-        timeout: 0.001
-        metric: cpu  # cpu, loadavg
-        param: 0.5   # cpu:alpha_value, loadavg:max_load
+        type: 'zeromq' # Options: 'zeromq' or 'memcached' or'' to disable feedback
+        zeromq:
+          radio:
+            broker:
+              address: 192.168.1.120
+              port: 12345
+            timeout: 1
+            group: zeromq
+            param: 0.5 # Options: [cpu:alpha_value]
+          dish:
+            broker:
+              port: 12345
+            timeout: 1
+            group: zeromq
+            enable: "True"
+#        memcached:
+#          namespace: default
+#          timeout: 0.001
+#          metric: cpu  # Options: cpu, loadavg
+#          param: 0.5   # Options: [cpu:alpha_value], [loadavg:max_load]
     httperf_clients:
-      replicas: 7
+      replicas: 1
       namespace: default
       uri: /cgi-bin/cpu.py?loop_count=1 # /index.html, /cgi-bin/cpu.py?loop_count=1
-      num_conns: "{{ 2 * 2000 }}"
+      num_conns: "300"
       num_calls: 1
-      rate: "{{ 2 * 32 }}"
+      rate: "30"
       ramp: 10
       iters: 1
       timeout: 10
@@ -52,7 +67,7 @@ workload:
       prme2-k8s-node-120:
         nodetype: "apache"
       prme3-k8s-node-120:
-        nodetype: "apache"
+        nodetype: "other"
       prme7-k8s-node-120:
         nodetype: "httperf"
       prme8-k8s-node-120:
